--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       <h1 id="title-h1">TonyLiu2004.github.io</h1>
     </div>
     <h2>Zoo:</h2>
-    <a href="https://tonyliu2004.github.io/Assignment-1-Zoo/">Tony's Zoo</a>
+    <a href="./assignment-1-zoo-TonyLiu/index.html">Tony's Zoo</a>
 </body>
 </html>
