--- a/assignment-1-zoo-TonyLiu/index.html
+++ b/assignment-1-zoo-TonyLiu/index.html
@@ -10,23 +10,22 @@
     </div>
     <h2>See the animals at the zoo:</h2>
     <div class="link">
-      <div class="card">
-        <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
-        <a href="polar-bear.html">Polar Bear</a>
-      </div>
-      <div class="card">
-        <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
-        <a href="polar-bear.html">Polar Bear</a>
-      </div>
-      <div class="card">
-        <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
-        <a href="polar-bear.html">Polar Bear</a>
-      </div>
-      <div class="card">
-        <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
-        <a href="polar-bear.html">Polar Bear</a>
-      </div>
+        <div class="card">
+            <a href="monkey.html"><img class="card-img" src="img/monkey.png" alt="monkey"></a>
+            <a href="monkey.html">Monkey</a>  
+        </div>
+        <div class="card">
+            <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
+            <a href="polar-bear.html">Polar Bear</a>
+        </div>
+        <div class="card">
+            <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
+            <a href="polar-bear.html">Polar Bear</a>
+        </div>
+        <div class="card">
+            <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
+            <a href="polar-bear.html">Polar Bear</a>
+        </div>
     </div>
-
   </body>
 </html>
