--- a/assignment-1-zoo-TonyLiu/index.html
+++ b/assignment-1-zoo-TonyLiu/index.html
@@ -15,9 +15,9 @@
             <a href="monkey.html">Monkey</a>  
         </div>
         <div class="card">
-            <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
-            <a href="polar-bear.html">Polar Bear</a>
-        </div>
+          <a href="elephant.html"><img class="card-img" src="img/elephant.jpg" alt="elephant"></a>
+          <a href="elephant.html">Elephant</a>  
+      </div>
         <div class="card">
             <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
             <a href="polar-bear.html">Polar Bear</a>
