--- a/assignment-1-zoo-TonyLiu/index.html
+++ b/assignment-1-zoo-TonyLiu/index.html
@@ -17,10 +17,10 @@
         <div class="card">
           <a href="elephant.html"><img class="card-img" src="img/elephant.jpg" alt="elephant"></a>
           <a href="elephant.html">Elephant</a>  
-      </div>
+        </div>
         <div class="card">
-            <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
-            <a href="polar-bear.html">Polar Bear</a>
+          <a href="peacock.html"><img class="card-img" src="img/peacock.jpg" alt="peacock"></a>
+          <a href="peacock.html">Peacock</a>  
         </div>
         <div class="card">
             <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
