--- a/assignment-1-zoo-TonyLiu/index.html
+++ b/assignment-1-zoo-TonyLiu/index.html
@@ -23,8 +23,8 @@
           <a href="peacock.html">Peacock</a>  
         </div>
         <div class="card">
-            <img class="card-img" src="img/polar-bear.gif" alt="polar bear">
-            <a href="polar-bear.html">Polar Bear</a>
+          <a href="dolphin.html"><img class="card-img" src="img/dolphin.png" alt="dolphin"></a>
+          <a href="dolphin.html">Dolphin</a>  
         </div>
     </div>
   </body>
