Added my name to main index page, and added a folder that will hold all my website files along with a basic html file that will be my zoo page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <h1 id="title-h1">TonyLiu2004.github.io</h1>
     </div>
     <h2>Zoo:</h2>
-    <a href="./assignment-1-zoo-TonyLiu/index.html">Tony's Zoo</a>
+    <a href="./assignment-1-zoo-TonyLiu/index.html">Tony's Zoo</a><br>
+    <a href="./assignment-1-zoo-DanielMartinez/index.html">Daniel's Zoo</a>
 </body>
 </html>
