added animals and basic pictures. Added a path for the pictures and the CSS

--- a/assignment-1-zoo-DanielMartinez/index.html
+++ b/assignment-1-zoo-DanielMartinez/index.html
@@ -2,10 +2,31 @@
 <html>
 	<head>
 		<title>Daniel's Zoo</title>
+		<link rel="stylesheet" type="text/css" href="css/index.css">
   	</head>
   	<body>
 		<div id="titleContainer">
-    			<h1 id="title-h1">Welcome to Daniel's Zoo</h1>
+    			<h1 id="mainTitle">Welcome to Daniel's Zoo!</h1>
+    		</div>
+    		<h2 id="subTitle">Take a look at the animals at my Zoo:</h2>
+    		
+    		<div class= "links">
+    			<div class: "animal">
+    				<a>Lion</a>
+    				<a><img class= "animalPic" src= "pics/lion.jpg" alt= "lion"></a>
+    			</div>
+    			<div class: "animal">
+    				<a>Panda</a>
+    				<a><img class= "animalPic" src= "pics/panda.jpg" alt= "panda"></a>
+    			</div>
+    			<div class: "animal">
+    				<a>Giraffe</a>
+    				<a><img class= "animalPic" src= "pics/giraffe.jpg" alt= "giraffe"></a>
+    			</div>
+    			<div class: "animal">
+    				<a>Flamingo</a>
+    				<a><img class= "animalPic" src= "pics/flamingo.jpg" alt= "flamingo"></a>
+    			</div>
     		</div>
   	</body>
 </html>
