Added CSS styling to my Zoo index page

--- a/assignment-1-zoo-DanielMartinez/index.html
+++ b/assignment-1-zoo-DanielMartinez/index.html
@@ -12,19 +12,19 @@
     		
     		<div class= "links">
     			<div class: "animal">
-    				<a>Lion</a>
+    				<a class = "animalName">Lion</a>
     				<a><img class= "animalPic" src= "pics/lion.jpg" alt= "lion"></a>
     			</div>
     			<div class: "animal">
-    				<a>Panda</a>
+    				<a class = "animalName">Panda</a>
     				<a><img class= "animalPic" src= "pics/panda.jpg" alt= "panda"></a>
     			</div>
     			<div class: "animal">
-    				<a>Giraffe</a>
+    				<a class = "animalName">Giraffe</a>
     				<a><img class= "animalPic" src= "pics/giraffe.jpg" alt= "giraffe"></a>
     			</div>
     			<div class: "animal">
-    				<a>Flamingo</a>
+    				<a class = "animalName">Flamingo</a>
     				<a><img class= "animalPic" src= "pics/flamingo.jpg" alt= "flamingo"></a>
     			</div>
     		</div>
