--- a/assignment-1-zoo-DanielMartinez/index.html
+++ b/assignment-1-zoo-DanielMartinez/index.html
@@ -12,8 +12,8 @@
     		
     		<div class= "links">
     			<div class: "animal">
-    				<a class = "animalName">Lion</a>
-    				<a><img class= "animalPic" src= "pics/lion.jpg" alt= "lion"></a>
+    				<a href= "lion.html" class = "animalName">Lion</a>
+    				<a href= "lion.html"><img class= "animalPic" src= "pics/lion.jpg" alt= "lion"></a>
     			</div>
     			<div class: "animal">
     				<a class = "animalName">Panda</a>
