--- a/assignment-1-zoo-DanielMartinez/index.html
+++ b/assignment-1-zoo-DanielMartinez/index.html
@@ -16,8 +16,8 @@
     				<a href= "lion.html"><img class= "animalPic" src= "pics/lion.jpg" alt= "lion"></a>
     			</div>
     			<div class: "animal">
-    				<a class = "animalName">Panda</a>
-    				<a><img class= "animalPic" src= "pics/panda.jpg" alt= "panda"></a>
+    				<a href= "panda.html" class = "animalName">Panda</a>
+    				<a href= "panda.html"><img class= "animalPic" src= "pics/panda.jpg" alt= "panda"></a>
     			</div>
     			<div class: "animal">
     				<a class = "animalName">Giraffe</a>
