Added giraffe page, linked it to the main zoo index page, and add css styling

--- a/assignment-1-zoo-DanielMartinez/index.html
+++ b/assignment-1-zoo-DanielMartinez/index.html
@@ -20,8 +20,8 @@
     				<a href= "panda.html"><img class= "animalPic" src= "pics/panda.jpg" alt= "panda"></a>
     			</div>
     			<div class: "animal">
-    				<a class = "animalName">Giraffe</a>
-    				<a><img class= "animalPic" src= "pics/giraffe.jpg" alt= "giraffe"></a>
+    				<a href= "giraffe.html" class = "animalName">Giraffe</a>
+    				<a href= "giraffe.html"><img class= "animalPic" src= "pics/giraffe.jpg" alt= "giraffe"></a>
     			</div>
     			<div class: "animal">
     				<a class = "animalName">Flamingo</a>
