--- a/assignment-1-zoo-DanielMartinez/panda.html
+++ b/assignment-1-zoo-DanielMartinez/panda.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Daniel's Zoo - Panda</title>
-		<link rel="stylesheet" type="text/css" href="css/lion.css">
+		<link rel="stylesheet" type="text/css" href="css/panda.css">
 	</head>
 	<body>
 		<h1 id= "name">Panda</h1>
