--- a/assignment-1-zoo-DanielMartinez/index.html
+++ b/assignment-1-zoo-DanielMartinez/index.html
@@ -24,8 +24,8 @@
     				<a href= "giraffe.html"><img class= "animalPic" src= "pics/giraffe.jpg" alt= "giraffe"></a>
     			</div>
     			<div class: "animal">
-    				<a class = "animalName">Flamingo</a>
-    				<a><img class= "animalPic" src= "pics/flamingo.jpg" alt= "flamingo"></a>
+    				<a href= "flamingo.html" class = "animalName">Flamingo</a>
+    				<a href= "flamingo.html"><img class= "animalPic" src= "pics/flamingo.jpg" alt= "flamingo"></a>
     			</div>
     		</div>
   	</body>
