Updated page styling

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
-    <div id="title-container">
-      <h1 id="title-h1">TonyLiu2004.github.io</h1>
+    <div id="left-container">
+      <div id="title-container">
+        <h1 id="title-h1">TonyLiu2004.github.io</h1>
+      </div>
     </div>
-    <h2>Zoo:</h2>
-    <a href="./assignment-1-zoo-TonyLiu/index.html">Tony's Zoo</a><br>
-    <a href="./assignment-1-zoo-DanielMartinez/index.html">Daniel's Zoo</a>
+    <div id="right-container">
+      <nav id="navbar">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <p>4</p>
+      </nav>
+      <div id="right-content">
+        <h2>Zoos:</h2>
+        <a href="./assignment-1-zoo-TonyLiu/index.html">Tony's Zoo</a><br>
+        <a href="./assignment-1-zoo-DanielMartinez/index.html">Daniel's Zoo</a>
+      </div>
+    </div>
 </body>
 </html>
