Updated Profile Website

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
   <head>
     <title>TonyLiu2004.github.io</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="left-container">
       <div id="title-container">
-        <h1 id="title-h1">TonyLiu2004.github.io</h1>
+        <div id="profile-pic-container">
+          <img id="profile-pic" src="./profile-pic.png" alt="Tony Liu">
+          <h1 id="title-h1">Tony Liu</h1>
+        </div>
+        <div id="info-container">
+          <p class="info-line"><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i> Software Engineer</p>
+          <p class="info-line"><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i> Brooklyn, New York</p>
+          <p class="info-line"><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i> Tony.liu404@gmail.com</p>
+          <p class="info-line"><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i> (646)-575-4403</p>
+          <p class="info-line"><a href="https://docs.google.com/document/d/1Efy8k4YTjZ3_Q0kWlWjKJ6yWkEfkwm183SaSv2aN1Xk/edit?usp=sharing" target="_blank">Resume</a></p>
+          <p class="info-line"><a href="https://www.linkedin.com/in/tonyliu404" target="_blank">LinkedIn</a></p>
+          <p class="info-line"><a href="https://github.com/TonyLiu2004" target="_blank">Github</a></p>
+          
+        </div>
       </div>
     </div>
     <div id="right-container">
@@ -18,9 +32,7 @@
         <p>4</p>
       </nav>
       <div id="right-content">
-        <h2>Zoos:</h2>
-        <a href="./assignment-1-zoo-TonyLiu/index.html">Tony's Zoo</a><br>
-        <a href="./assignment-1-zoo-DanielMartinez/index.html">Daniel's Zoo</a>
+
       </div>
     </div>
 </body>
