--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p class="info-line"><i class="fa fa-envelope"></i> Tony.liu404@gmail.com</p>
           <p class="info-line"><i class="fa fa-phone"></i> (646)-575-4403</p>
           <p class="info-line"><i class="fa fa-external-link"></i><a href="https://docs.google.com/document/d/1Efy8k4YTjZ3_Q0kWlWjKJ6yWkEfkwm183SaSv2aN1Xk/edit?usp=sharing" target="_blank">Resume</a></p>
-          <p class="info-line"><i class="fa fa-linkedin-square"></i> <a href="https://www.linkedin.com/in/tonyliu404" target="_blank">LinkedIn</a></p>
+          <p class="info-line"><i class="fa fa-linkedin-square"></i><a href="https://www.linkedin.com/in/tonyliu404" target="_blank">LinkedIn</a></p>
           <p class="info-line"><i class="fa fa-github"></i><a href="https://github.com/TonyLiu2004" target="_blank">Github</a></p>
           
         </div>
@@ -27,9 +27,9 @@
     </div>
     <div id="right-container">
       <nav id="navbar">
-        <p onclick="scrollToSection('about-me')">About Me</p>
-        <p onclick="scrollToSection('projects')">Projects</p>
-        <p>3</p>
+        <p class="navbar" onclick="scrollToSection('about-me')">About Me</p>
+        <p class="navbar" onclick="scrollToSection('projects')">Projects</p>
+        <p class="navbar" onclick="scrollToSection('skills')">Skills</p>
         <p>4</p>
       </nav>
       <div id="right-content">
@@ -51,6 +51,23 @@
           </div>
         </div>
 
+        <!-- ========================= -->
+        <div class="content-container">
+          <h1 class="content-heading" id="skills">Technical Skills</h1>
+          <div class = "skills-container">
+            <div class="skill">Python</div>
+            <div class="skill">C++</div>
+            <div class="skill">Java</div>
+            <div class="skill">JavaScript</div>
+            <div class="skill">React.js</div>
+            <div class="skill">Git</div>
+            <div class="skill">Bash</div>
+            <div class="skill">Full-Stack Software Engineering</div>
+            <div class="skill">Project Management</div>
+            <div class="skill">Web Development</div>
+          </div>
+          
+        </div>
         <!-- ========================= -->
 
         <div class="content-container">
