Improved projects posts

--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
                 <li>Implemented data management, user authentication, and user profile features using Firebase.</li>
                 <li>Led the project from planning to deployment, ensuring seamless user experience and backend functionality.</li>
               </div>
-              <img class="project-image" src="./assets/NYC-Events-pic.PNG" alt="Travel Itinerary Generator" />
+              <img class="project-image" src="./assets/NYC-Events-pic.PNG" alt="NYC Events Website" />
             </div>
-          </div>
-        </a>
-        <!-- -->
-        <a href="https://league-hub.onrender.com/" target="_blank" class="project-link">
-          <div class="project-container">
-            <div class="project-header">
-              <h3>Discussion Hub / Social Media Clone - Full Stack Developer</h3>
-              <h4>November 17, 2023</h4>
+          </a>
+          <!-- -->
+          <a href="https://league-hub.onrender.com/" target="_blank" class="project-link">
+            <div class="project-container">
+              <div class="project-header">
+                <h3>Discussion Hub / Social Media Clone - Full Stack Developer</h3>
+                <h4>November 17, 2023</h4>
+              </div>
+              <p class="project-description">A dynamic discussion platform that alloqs users to interact through multimedia posts and a variety of engagement features. </p>
+              <div class="bullet-points">
+                <li>Added interactive features including post liking and commenting to enhance user interaction.</li>
+                <li>Implemented user authentication and account management for secure access and personalized profiles.</li>
+                <li>Designed post sorting functionality for improved content discovery and user experience.</li>
+              </div>
+              <img class="project-image" src="./assets/Discussion-Hub-pic.PNG" alt="Discussion Hub" />
             </div>
-            <p class="project-description">A dynamic discussion platform that alloqs users to interact through multimedia posts and a variety of engagement features. </p>
-            <div class="bullet-points">
-              <li>Added interactive features including post liking and commenting to enhance user interaction.</li>
-              <li>Implemented user authentication and account management for secure access and personalized profiles.</li>
-              <li>Designed post sorting functionality for improved content discovery and user experience.</li>
-            </div>
-            <img class="project-image" src="./assets/NYC-Events-pic.PNG" alt="Travel Itinerary Generator" />
-          </div>
+          </a>
+          <!-- -->
+          <!-- ========================= -->
         </div>
-      </a>
-        <!-- ========================= -->
       </div>
     </div>
     <script>
