--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
             <div class="skill">Java</div>
             <div class="skill">JavaScript</div>
             <div class="skill">React.js</div>
-            <div class="skill">Next.js</div>
+            <div class="skill">SQL</div>
             <div class="skill">Git</div>
             <div class="skill">Bash</div>
+            <div class="skill">Data Science</div>
+            <div class="skill">Machine Learning</div>
             <div class="skill">Full-Stack Software Engineering</div>
             <div class="skill">Project Management</div>
             <div class="skill">Web Development</div>
