Added Food Chain Project

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 
         <div class="content-container">
           <h1 class="content-heading" id="about-me">About Me</h1>
-          <p class="content-p">Hello! I'm Tony Liu, a motivated and enthusiastic Computer Science student with a passion for technology. 
-             I am currently pursuing my degree at Hunter College, on track to graduate in May 2026. I have experience
-             with full-stack software development with React.js, C++, Python, and Quantum Computing research. Looking for a role where I can grow
-             and learn from experienced professionals while contributing my skills and experiences.
+          <p class="content-p">
+            Hello! I'm Tony Liu, an aspiring Software Engineer and Computer Science student at Hunter College, graduating in June 2026. 
+            With a strong foundation in software development, machine learning, and AI, I’m passionate about creating impactful solutions through technology. 
+            I've worked on building innovative applications using Python, JavaScript, and cloud technologies, and 
+            I’m eager to grow and contribute in a role that combines innovative technology with meaningful problem-solving.
           </p>
           <!-- <div class="bullet-points">
             <li class="content-p">Fun Fact: I once built and showcased a <a href="https://codefest-97b85.web.app/" target="_blank">website</a> that can help plan entire vacations, 
@@ -52,30 +53,34 @@
         </div>
 
         <!-- ========================= -->
-        <div class="content-container">
-          <h1 class="content-heading" id="skills">Technical Skills</h1>
-          <div class = "skills-container">
-            <div class="skill">Python</div>
-            <div class="skill">C++</div>
-            <div class="skill">Java</div>
-            <div class="skill">JavaScript</div>
-            <div class="skill">React.js</div>
-            <div class="skill">SQL</div>
-            <div class="skill">Git</div>
-            <div class="skill">Bash</div>
-            <div class="skill">Data Science</div>
-            <div class="skill">Machine Learning</div>
-            <div class="skill">Full-Stack Software Engineering</div>
-            <div class="skill">Project Management</div>
-            <div class="skill">Web Development</div>
-            <div class="skill">Game Development</div>
-          </div>
-          
-        </div>
-        <!-- ========================= -->
 
         <div class="content-container">
           <h1 class="content-heading" id="projects">Projects</h1>
+          <!-- -->
+          <!-- -->
+            <a href="https://huggingface.co/spaces/tonyliu404/FoodChain" target="_blank" class="project-link">
+            <div class="project-container">
+              <div class="project-header">
+                <h3>Food Chain - Software Engineering and Data Science Lead</h3>
+                <h4>December 11, 2024</h4>
+              </div>
+              <p class="project-description">
+                A multipurpose application that combines a dish classification machine learning model, 
+                Retrieval Augmented Generation (rag) for recipe contexts, 
+                and AI-driven responses to provide comprehensive dish-related information.
+              </p>
+              <div class="bullet-points">
+                <li>Developed and fine-tuned a convolutional neural network using EfficientNetB0 as our base model for dish classification, achieving 74% accuracy across 101 dish categories.</li>
+                <li>Integrated a MongoDB vector database with over 25,000 recipes from Food.com and utilized LangChain for efficient retrieval of relevant recipe contexts.</li>
+                <li>Implemented a pipeline combining image classification, RAG, and OpenAI to generate accurate, context-aware dish and recipe suggestions.</li>
+                <li>Built a user-friendly interface with Streamlit and deployed the application on Huggingface for accessibility and performance.</li>
+                <l1>Presented the application at a demo night event, where 100+ students and technical professionals provided positive feedback and reviews after testing the app.</l1>
+              </div>
+              <div class="image-container">
+                <img class="project-image" src="./assets/FoodChain.PNG" alt="Food Chain Image" />
+              </div>
+            </div>
+          </a>
           <!-- -->
           <a href="https://flashcardify.net/" target="_blank" class="project-link">
             <div class="project-container">
@@ -205,6 +210,28 @@
             </div>
           </a>
           <!-- ========================= -->
+
+          <div class="content-container">
+            <h1 class="content-heading" id="skills">Technical Skills</h1>
+            <div class = "skills-container">
+              <div class="skill">Python</div>
+              <div class="skill">C++</div>
+              <div class="skill">Java</div>
+              <div class="skill">JavaScript</div>
+              <div class="skill">React.js</div>
+              <div class="skill">SQL</div>
+              <div class="skill">Git</div>
+              <div class="skill">Bash</div>
+              <div class="skill">Data Science</div>
+              <div class="skill">Machine Learning</div>
+              <div class="skill">Full-Stack Software Engineering</div>
+              <div class="skill">Project Management</div>
+              <div class="skill">Web Development</div>
+              <div class="skill">Game Development</div>
+            </div>  
+          </div>
+
+        <!-- ========================= -->          
         </div>
       </div>
     </div>
