Updated profile picture and skills

--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
               <div class="skill">Java</div>
               <div class="skill">JavaScript</div>
               <div class="skill">React.js</div>
+              <div class="skill">Microsoft 365</div>
+              <div class="skill">Microsoft Power Automate</div>
               <div class="skill">SQL</div>
               <div class="skill">Git</div>
               <div class="skill">Bash</div>
