Added SpokenVision Project

--- a/index.html
+++ b/index.html
@@ -58,6 +58,34 @@
           <h1 class="content-heading" id="projects">Projects</h1>
           <!-- -->
           <!-- -->
+          <a href="https://spokenvision.web.app/" target="_blank" class="project-link">
+            <div class="project-container">
+              <div class="project-header">
+                <h3>Spoken Vision: Multimodal Vision System for the Visually Impaired - Software Engineer</h3>
+                <h4>May 20, 2025</h4>
+              </div>
+              <p class="project-description">
+                SpokenVision is an assistive AI application designed to help visually impaired users perceive their environment through real-time audio descriptions. 
+                It captures video input, detects and identifies objects, estimates their distance, and converts the information into spoken feedback using advanced AI models.
+              </p>
+              <div class="bullet-points">
+                <li>Spearheading development of a real-time vision system that provides spoken feedback to visually impaired users.</li>
+                <li>Contributed as a key member of a 3-person team to implement a multimodal AI pipeline integrating six pretrained models for object detection, depth estimation, image captioning, and scene-based Q&A.</li>
+                <li>Designed and developed an interactive React.js website with a backend API to display detection results and simulate end-to-end user interaction, enhancing accessibility and usability.</li>
+                <li>Uses camera feed to capture video, YOLOv8 for object detection, MiDaS for depth estimation, BLIP/Qwen for image captioning, spatial context modeling, and text-to-speech conversion.</li>
+                <l1>Presented the application at the CUNY Tech Prep Graduation demo night event, where 100+ students and tech professionals tested and reviewed our project, providing positive feedback.</l1>
+              </div>
+              <div class="image-container">
+                <iframe width="315" height="560" class="project-image"
+                    src="https://www.youtube.com/embed/gWyHpFkxIAg" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+              </div>
+            </div>
+          </a>
+          <!-- -->
             <a href="https://huggingface.co/spaces/tonyliu404/FoodChain" target="_blank" class="project-link">
             <div class="project-container">
               <div class="project-header">
